--- a/packages/@navikt/side-menu/src/indexStyles.less
+++ b/packages/@navikt/side-menu/src/indexStyles.less
@@ -5,8 +5,8 @@
     padding: 2.5rem 0;
     background-color: #fff;
     border-right: 1px solid #b7b1a9;
-    min-width: 200px;
-    max-width: 227px;
+    min-width: 220px;
+    max-width: 250px;
 
     &__link-list {
         list-style-type: none;
@@ -15,7 +15,9 @@
     }
 
     &__heading.typo-normal {
-        padding: 0 2rem 0 0.75rem;
+        border-bottom: 1px solid #c6c2bf;
+        margin: 0 1rem 0.5rem;
+        padding: 0 1rem;
         height: 2rem;
         color: #3e3832;
         font-weight: 600;
